--- a/POKER/pom.xml
+++ b/POKER/pom.xml
@@ -7,7 +7,7 @@
     <groupId>AVDEY</groupId>
     <artifactId>poker</artifactId>
     <version>1.0</version>
-
+    <packaging>war</packaging>
 
     <properties>
         <springframework.version>5.2.3.RELEASE</springframework.version>
@@ -103,6 +103,29 @@
             <artifactId>h2</artifactId>
             <version>1.4.194</version>
         </dependency>
+
+
+
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${springframework.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>jstl</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
+
 
     </dependencies>
 
