--- a/shop/pom.xml
+++ b/shop/pom.xml
@@ -66,6 +66,15 @@
             <version>2.0.1.Final</version>
         </dependency>
 
+
+<!--        pdf-->
+
+        <dependency>
+            <groupId>com.lowagie</groupId>
+            <artifactId>itext</artifactId>
+            <version>2.1.7</version>
+        </dependency>
+
     </dependencies>
 
 
