--- a/shop/pom.xml
+++ b/shop/pom.xml
@@ -75,6 +75,14 @@
             <version>2.1.7</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-jdbc -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>5.2.3.RELEASE</version>
+        </dependency>
+
+
     </dependencies>
 
 
