--- a/shop/src/main/resources/views.properties
+++ b/shop/src/main/resources/views.properties
@@ -1,3 +1,7 @@
 report.(class) = shop.web.view.PdfReport
 
+all_reports.(class) = shop.web.view.PdfReport
+
+
+
 pdfView.(class)= shop.web.view.PDFBuilder
