--- a/shop/pom.xml
+++ b/shop/pom.xml
@@ -156,6 +156,14 @@
             <version>5.2.3.RELEASE</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>2.7.20</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
 
