--- a/shop/pom.xml
+++ b/shop/pom.xml
@@ -164,6 +164,14 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.10</version>
+        </dependency>
+
+
+
     </dependencies>
 
 
