--- a/shop/pom.xml
+++ b/shop/pom.xml
@@ -171,6 +171,13 @@
         </dependency>
 
 
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>5.2.3.RELEASE</version>
+            <scope>test</scope>
+        </dependency>
+
 
     </dependencies>
 
