--- a/examplesrpingboot/pom.xml
+++ b/examplesrpingboot/pom.xml
@@ -7,7 +7,7 @@
     <groupId>ru.avdey</groupId>
     <artifactId>example-srping-boot</artifactId>
     <version>1.0</version>
-
+    <packaging>jar</packaging>
 
     <!-- Inherit defaults from Spring Boot -->
     <parent>
@@ -17,12 +17,19 @@
     </parent>
 
     <dependencies>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
